template driven form updated

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,6 +12,7 @@
         <li><a routerLink="/angular-material">8.Angular Material</a></li>
         <li><a routerLink="/parent">9.Parent-Child</a></li>
         <li><a routerLink="/hooks">10.Hooks</a></li>
+        <li><a routerLink="/template-driven-form">11.Template Driven Form</a></li>
       </ul>
 
 
@@ -38,6 +39,11 @@
       <h4>Assignment 12-02-2024</h4>
       <ul>
         <li><a routerLink="/hooks">1.Hooks</a></li>
+      </ul>
+
+      <h4>Assignment 13-02-2024</h4>
+      <ul>
+        <li><a routerLink="/template-driven-form">1.Template Driven Form</a></li>
       </ul>
       
   </div>
