home page updated

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,7 +15,7 @@
         <li><a routerLink="/template-driven-form">11.Template Driven Form</a></li>
       </ul>
 
-      <div style="">
+      <div >
       <h1>Tasks</h1>
       <h4>Assignment 05-02-2024</h4>
       <ul>
