--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div style="display:flex; height: 100%; scrollbar-width: thin;">
+<div style="display:flex; height: 100%;">
   <div style="width:16%; padding: 10px; border-right: 1px solid #ccc;" class="side-bar">
       <h1>Topic</h1>
       <ul>
@@ -15,7 +15,7 @@
         <li><a routerLink="/template-driven-form">11.Template Driven Form</a></li>
       </ul>
 
-      <div >
+      
       <h1>Tasks</h1>
       <h4>Assignment 05-02-2024</h4>
       <ul>
@@ -45,7 +45,7 @@
       <ul>
         <li><a routerLink="/template-driven-form">1.Template Driven Form</a></li>
       </ul>
-      </div>
+     
       
   </div>
 
