--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div style="display:flex; height: 100%;">
+<!-- <div style="display:flex; height: 100%;">
   <div style="width:16%; padding: 10px; border-right: 1px solid #ccc;" class="side-bar">
       <h1>Topic</h1>
       <ul>
@@ -55,4 +55,105 @@
     <router-outlet></router-outlet>
   </div>
 </div>
+ -->
 
+
+ <!-- The angular sidebar and menubar.-->
+
+ <mat-toolbar color="primary">
+  <button mat-icon-button (click)="sidenav.toggle()" matTooltip="Menu">
+      <mat-icon>menu</mat-icon>
+  </button>
+  <span>Angular Training</span>
+  <span class="toolbar-item-spacer"></span>
+  <button mat-icon-button matTooltip="Share">
+      <mat-icon>share</mat-icon>
+  </button>
+  <button mat-icon-button matTooltip="Notifications">
+      <mat-icon>notifications</mat-icon>
+  </button>
+  <button mat-icon-button matTooltip="My Account" [matMenuTriggerFor]="userAccountMenu">
+      <mat-icon>account_circle</mat-icon>
+  </button>
+  <mat-menu #userAccountMenu [overlapTrigger]="false" yPosition="below">
+      <button mat-menu-item routerLink="#">
+          <mat-icon>person</mat-icon><span>My Account</span>
+      </button>
+      <button mat-menu-item routerLink="#">
+          <mat-icon>settings</mat-icon><span>Settings</span>
+      </button>
+      <button mat-menu-item routerLink="#">
+          <mat-icon>help</mat-icon><span>Help</span>
+      </button>
+      <mat-divider></mat-divider>
+      <button mat-menu-item routerLink="#">
+          <mat-icon>exit_to_app</mat-icon>Logout
+      </button>
+  </mat-menu>
+</mat-toolbar>
+
+
+<mat-sidenav-container class="app-container">
+  <mat-sidenav #sidenav mode="side" [class.mat-elevation-z4]="true" class="app-sidenav">
+      <mat-nav-list>
+          
+          <mat-expansion-panel [class.mat-elevation-z0]="true">
+              <mat-expansion-panel-header style="font-size: 20px; font-weight: bold; background-color: gray;">
+                  Topics
+              </mat-expansion-panel-header>
+              <mat-nav-list>
+                <a mat-list-item routerLink="/interpolation">1.Interpolation</a>
+                <a mat-list-item routerLink="/property-binding">2.Property Binding</a>
+                <a mat-list-item routerLink="/event-binding">3.Event Binding</a>
+                <a mat-list-item routerLink="/two-way-binding">4.2-way Binding</a>
+                <a mat-list-item routerLink="/pipe">5.Pipe</a>
+                <a mat-list-item routerLink="/directive">6.Directives</a>
+                <a mat-list-item routerLink="/bootstrap">7.Bootstrap</a>
+                <a mat-list-item routerLink="/angular-material">8.Angular Material</a>
+                <a mat-list-item routerLink="/parent">9.Parent-Child</a>
+                <a mat-list-item routerLink="/hooks">10.Hooks</a>
+                <a mat-list-item routerLink="/template-driven-form">11.Template Driven Form</a>
+                <a mat-list-item routerLink="/model-driven-form">12.Model Driven Form</a>
+                <a mat-list-item routerLink="/dynamic-form">13.Dynamic Form</a>
+              </mat-nav-list>
+          </mat-expansion-panel>
+          <div style="padding: 1px;"></div>
+          <mat-expansion-panel [class.mat-elevation-z0]="true">
+              <mat-expansion-panel-header style=" font-size: 20px; font-weight: bold; background-color: gray;">
+                  Tasks
+              </mat-expansion-panel-header>
+              <mat-nav-list>
+                <h4>Assignment 05-02-2024</h4>
+                <a mat-list-item routerLink="/ordinal-numbers">1.ordinal numbers</a>
+                <a mat-list-item routerLink="/MR-MISS">2.Mr/Miss </a>
+                <a mat-list-item routerLink="/search_object">3.search employee</a>
+                <a mat-list-item routerLink="/built-in-pipe">4.Built in pipe</a>
+
+                <h4>Assignment 07-02-2024</h4>
+                <a mat-list-item routerLink="/parent_task">1.parent-child</a>
+
+                <h4>Assignment 08-02-2024</h4>
+                <a mat-list-item routerLink="/bootstrap">1.Bootstrap</a>
+                <a mat-list-item routerLink="/angular-material">2.Angular Material</a>
+                
+                <h4>Assignment 12-02-2024</h4>
+                <a mat-list-item routerLink="/hooks">1.Hooks</a>
+
+                <h4>Assignment 13-02-2024</h4>
+                <a mat-list-item routerLink="/template-driven-form">1.Template Driven Form</a>
+
+                <h4>Assignment 14-02-2024</h4>
+                <a mat-list-item routerLink="/model-driven-form">1.Model Driven Form</a>
+
+              </mat-nav-list>
+          </mat-expansion-panel>
+      </mat-nav-list>
+  </mat-sidenav>
+  <mat-sidenav-content>
+      
+    <div style="flex: 2; padding: 20px;" class="main-bar">
+      <router-outlet></router-outlet>
+    </div>
+      
+  </mat-sidenav-content>
+</mat-sidenav-container> 
