--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -118,6 +118,7 @@
                 <a mat-list-item routerLink="/template-driven-form">11.Template Driven Form</a>
                 <a mat-list-item routerLink="/model-driven-form">12.Model Driven Form</a>
                 <a mat-list-item routerLink="/dynamic-form">13.Dynamic Form</a>
+                <a mat-list-item routerLink="/time">14.Time</a>
               </mat-nav-list>
           </mat-expansion-panel>
           <div style="padding: 1px;"></div>
