--- a/src/app/components/hooks/after-view-checked/parent-after-view-checked/parent-after-view-checked.component.html
+++ b/src/app/components/hooks/after-view-checked/parent-after-view-checked/parent-after-view-checked.component.html
@@ -1,3 +1,4 @@
+<div class="heading">ngAfterViewChecked</div>
 <p>parent-after-view-checked works!</p>
 <input type="text" #inputp1>
 <button (click)="onbtnsubmit(inputp1)">Submit</button>
