--- a/src/app/components/pipe/pipe.component.html
+++ b/src/app/components/pipe/pipe.component.html
@@ -31,13 +31,13 @@
 
 <h1>currency</h1>
 <h4>
-    {{2000 | currency}}
+    {{2000 | currency:'INR'}}
 </h4>
 
 <h1>date</h1>
 <h4>
     {{today | date}}
-</h4>
+</h4> 
 
 <h1>date:'fullDate'</h1>
 <h4>
